# Course-management

./: .gitignore  package-lock.json  package.json
course-backend/: Cargo.toml
course-backend/migrations/2024-03-23-161831_create_courses/: up.sql
course-backend/migrations/2024-03-24-062347_create_courses/: up.sql
course-backend/migrations/2024-03-24-134014_create_courses/: up.sql
course-backend/migrations/2024-03-26-174949_create_courses/: up.sql
course-backend/src/: database.rs  main.rs  models.rs  schema.rs
src/: App.js  index.css  index.js
src/backend_folder/: app.js  index.js
src/backend_folder/public/: handling.css  main.css  uploadride.css
src/backend_folder/public/img/: about.jpg.url  banner.jpg.url  car-image.jpg.url
src/backend_folder/views/: login.ejs  main.ejs  signup.ejs
src/components/: Home.js  Main.js  NavBar.js  StudDashBoard.js
